# personal-portfolio

./: chatbot.css  chatbot.js  index.html  script.js  style.css
ai-chatbot-main/: Readme.md  app.py  code.py  index.html  intents.json  model.py  run  structure
ai-chatbox/: README.md  database.py  main.py  models.py  prompts.py  requirements.txt
ai-chatbox/static/: app.js  style.css
ai-chatbox/templates/: index.html
chatbox-main/chatbox-main/: electron.vite.config.ts  package.json  pnpm-lock.yaml
chatbox-main/chatbox-main/release/app/: package.json
chatbox-main/chatbox-main/test/integration/model-provider/: tool-use-history.test.ts
ecommerce-ai-system/frontend/: package-lock.json  package.json
ecommerce-ai-system/frontend/src/: App.tsx  index.css
ecommerce-ai-system/frontend/src/components/: CartDrawer.tsx  ChatDrawer.tsx  Hero.tsx  Navbar.tsx  ProductCard.tsx
ecommerce-ai-system/frontend/src/data/: products.ts
ecommerce-ai-system/frontend/src/services/: aiService.ts
nova-ai-chatbot/: .gitignore  README.md  index.html  main.py  script.js  style.css
resume-analyzer/: app.py  check_fonts.py  index.html  main.py  pyproject.toml  requirements.txt  start.ps1  test_analyzer.py
resume-analyzer/static/: app.js  index.html  style.css
