[project]
name = "resume-analyzer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "numpy>=2.4.4",
    "pdfminer-six>=20260107",
    "python-docx>=1.2.0",
    "reportlab>=4.4.10",
    "scikit-learn>=1.8.0",
]
